- Fixed the server not spewing errors when Starting/Stopping the server more than a few times. It is still a good idea to close down hes after a day or so! - Changed to my original back end class for the gameserver ini editing as it works as intended - Added more exception catching and writing to a file in the Hellion class - Fixed the "Key already exists" error in the StartServer() method preventing the server from starting. - Squashed other bugs

--- a/HellionExtendedServer/HellionExtendedServer.csproj
+++ b/HellionExtendedServer/HellionExtendedServer.csproj
@@ -137,6 +137,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GUI\GameServerIni.cs" />
     <Compile Include="Modules\CrashDump.cs" />
     <Compile Include="Globals.cs" />
     <Compile Include="GUI\Forms\Updater\UpdateForm.cs">
@@ -232,9 +233,9 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <None Include="README.md" />
     <EmbeddedResource Include="Resources\GameServer_example.ini" />
     <EmbeddedResource Include="Resources\NLog.config" />
+    <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
