--- a/HellionExtendedServer/Resources/GameServer_example.ini
+++ b/HellionExtendedServer/Resources/GameServer_example.ini
@@ -13,7 +13,7 @@ status_port=
 #server_password							(Default: _blank_)				Server password
 #description								(Default: _blank_)				Server description that will be displayed in Hellion server browser, maximum character count 500
 #save_interval								(Default: 900) (-1 = Disabled)	Automatic server save, value in seconds
-#number_of_save_files						(Default: 10)					Number of save files, max value = 100
+#number_o_save_files						(Default: 10)					Number of save files, max value = 100
 #server_restart_time						(Default: -1) (-1 = Disabled)	Automatic server restart, value in seconds
 #print_debug_objects						(Default: false)				Set to true for objects on server print
 
@@ -34,4 +34,4 @@ status_port=
 #spawn_manager_print_item_attach_points		(Default: false)				Spawn manager debug information
 #spawn_manager_print_item_type_ids			(Default: false)				Spawn manager debug information
 
-#Note: All server settings that have default value are not required in ini file, except for ones marked with (Required)
+#Note: All 2. Server Settings that have default value are not required in ini file, except for ones marked with (Required)
