- Added Self updates to hes using GitHubs Octokit (-nohesupdates commandlinearg to disable)  - Moved player control to its own tabPage  - Renamed Chat & Player Control to Server Chat  - Added Player lists to Player Control and Server Chat  - Added tab that shows HellionExtendedServers Website  - Added the '-noupdatehellion' commandline arg to disable steam updates  - Added Markdown Sharp for later use  - Bug fixes

--- a/HellionExtendedServer/App.config
+++ b/HellionExtendedServer/App.config
@@ -1,18 +1,22 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
             <section name="HellionExtendedServer.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
     <runtime>
-        <useLegacyJit enabled="1"/>
+        <useLegacyJit enabled="1" />
           <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
             <probing privatePath="hes\bin;" />
-        </assemblyBinding>
+             <dependentAssembly>
+                    <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+                    <bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0" />
+               </dependentAssembly>
+          </assemblyBinding>
     </runtime>
     <userSettings>
         <HellionExtendedServer.Properties.Settings>
@@ -22,11 +26,17 @@
             <setting name="DebugMode" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="AutoUpdateHes" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="AutoUpdateHellion" serializeAs="String">
+                <value>False</value>
+            </setting>
         </HellionExtendedServer.Properties.Settings>
     </userSettings>
     <system.net>
         <settings>
-          <httpWebRequest useUnsafeHeaderParsing = "true"/>
+          <httpWebRequest useUnsafeHeaderParsing="true" />
         </settings>
     </system.net>
 </configuration>
