--- a/HellionExtendedServer/HellionExtendedServer.csproj
+++ b/HellionExtendedServer/HellionExtendedServer.csproj
@@ -209,6 +209,7 @@
     <Compile Include="Timming\MainTimer.cs" />
     <Compile Include="Timming\Repeating_Task.cs" />
     <Compile Include="Timming\Repeating_Delayed_Task.cs" />
+    <Compile Include="Timming\TestEvent.cs" />
     <EmbeddedResource Include="Resources\Octokit.dll" />
     <EmbeddedResource Include="Resources\Newtonsoft.Json.dll" />
     <EmbeddedResource Include="GUI\Forms\Updater\UpdateForm.resx">
