* Changed Versioning system to support hotfixes     * (1.2.1.0) Major.Minor.Build.Revison(aka hotfix)  * Fixed the Self-Installer throwing a SaveConfiguration exception if the server wasn't ran before changing to use development releases.  * Fixed the Initial restart after changing to use Development Releases to restart properly if the server wasn't initiated yet

--- a/HellionExtendedServer/HellionExtendedServer.csproj
+++ b/HellionExtendedServer/HellionExtendedServer.csproj
@@ -242,6 +242,7 @@
     <EmbeddedResource Include="Resources\GameServer_example.ini" />
     <EmbeddedResource Include="Resources\NLog.config" />
     <None Include="README.md" />
+    <EmbeddedResource Include="Resources\HellionExtendedServer.exe.config" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
