--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,10 @@ branches:
   # blacklist
   except:
     - gh-pages
-    
+     
+before_build:
+    - nuget restore
+  
 build:
   parallel: true
   project: HellionExtendedServer_Solution.sln      
