--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,4 +14,4 @@ build:
   include_nuget_references: true 
   
 before_build:
-    - nuget restore
+    - nuget restore HellionExtendedServer_Solution.sln  
