--- a/HellionExtendedServer/packages.config
+++ b/HellionExtendedServer/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="GitInfo" version="2.0.6" targetFramework="net452" developmentDependency="true" />
+  <package id="Microsoft.Net.Compilers" version="2.4.0" targetFramework="net452" developmentDependency="true" />
   <package id="NLog" version="4.4.12" targetFramework="net452" />
   <package id="NLog.Config" version="4.4.12" targetFramework="net452" />
   <package id="NLog.Schema" version="4.4.12" targetFramework="net452" />
