--- a/HellionExtendedServer/packages.config
+++ b/HellionExtendedServer/packages.config
@@ -1,9 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="GitInfo" version="2.0.6" targetFramework="net452" developmentDependency="true" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.SelfHost" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="2.4.0" targetFramework="net452" developmentDependency="true" />
   <package id="NLog" version="4.4.12" targetFramework="net452" />
   <package id="NLog.Config" version="4.4.12" targetFramework="net452" />
   <package id="NLog.Schema" version="4.4.12" targetFramework="net452" />
   <package id="Octokit" version="0.28.0" targetFramework="net452" />
+  <package id="Owin" version="1.0" targetFramework="net452" />
+  <package id="System.Net.Http" version="4.3.3" targetFramework="net452" />
+  <package id="System.Net.Http.Formatting.Extension" version="5.2.3.0" targetFramework="net452" />
 </packages>
